images source fix

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 
     <header>
-        <img src="/img/cover.png" alt="" class="cover-image">
+        <img src="https://ammyy9908.github.io/dama/img/cover.png" alt="" class="cover-image">
         <a href="#logo" class="logo">
             
-            <img src="/img/Logo.svg" alt="">
+            <img src="https://ammyy9908.github.io/dama/img/Logo.svg" alt="">
         </a>
     </header>
     <p class="description first-desc">Dama is a luxury women's handmade fashion brand in Bosnia and Herzegovina. The focus of the brand are coats made out of high-quality materials like cashmere and wool. All coats are made with high attention to detail, and some are even custom-made for some of the customers with every part designed and created just for them.​​​​​​​</p>
@@ -21,22 +21,22 @@
         <div class="container">
             <div class="gullias">
                <div class="image-box">
-                <img src="/img/gullia1.png" alt="">
+                <img src="https://ammyy9908.github.io/dama/img/gullia1.png" alt="">
                </div>
                 <div class="image-box">
-                    <img src="/img/gullia2.png" alt="">
+                    <img src="https://ammyy9908.github.io/dama/img/gullia2.png" alt="">
                 </div>
                 <div class="image-box">
-                    <img src="/img/gullia3.png" alt="">
+                    <img src="https://ammyy9908.github.io/dama/img/gullia3.png" alt="">
                 </div>
             </div>
 
             <div class="packaging">
                 <div class="image-box">
-                    <img src="/img/Packaging 01.png" alt="">
+                    <img src="https://ammyy9908.github.io/dama/img/Packaging 01.png" alt="">
                 </div>
                 <div class="image-box">
-                    <img src="/img/Packaging 02.png" alt="">
+                    <img src="https://ammyy9908.github.io/dama/img/Packaging 02.png" alt="">
                 </div>
             </div>
 
@@ -45,57 +45,57 @@
 
                 <div class="arabella-big">
                     <div class="image-box">
-                        <img src="/img/Arabella 01.jpg" alt="">
+                        <img src="https://ammyy9908.github.io/dama/img/Arabella 01.jpg" alt="">
                     </div>
                 </div>
 
                 <div class="arabellas">
                     <div class="image-box">
-                        <img src="/img/Arabella 01.png" alt="">
+                        <img src="https://ammyy9908.github.io/dama/img/Arabella 01.png" alt="">
                     </div>
                     <div class="image-box">
-                        <img src="/img/Arabella 02.png" alt="">
+                        <img src="https://ammyy9908.github.io/dama/img/Arabella 02.png" alt="">
                     </div>
                     <div class="image-box">
 
-                        <img src="/img/Arabella 03.png" alt="">
+                        <img src="https://ammyy9908.github.io/dama/img/Arabella 03.png" alt="">
                     </div>
                 </div>
 
                 <div class="ella_mona">
                     <div class="image-box">
-                        <img src="/img/Elda.png" alt="">
+                        <img src="https://ammyy9908.github.io/dama/img/Elda.png" alt="">
                     </div>
                    <div class="image-box">
-                    <img src="/img/Mona.png" alt="">
+                    <img src="https://ammyy9908.github.io/dama/img/Mona.png" alt="">
                    </div>
 
                 </div>
 
                 <div class="elda-mona-container">
                     <div class="image-box">
-                        <img src="/img/Mona 01.png" alt="">
+                        <img src="https://ammyy9908.github.io/dama/img/Mona 01.png" alt="">
                     </div>
                     <div class="image-box">
-                        <img src="/img/Mona 02.png" alt="">
+                        <img src="https://ammyy9908.github.io/dama/img/Mona 02.png" alt="">
                     </div>
                     <div class="image-box">
-                        <img src="/img/mon01.png" alt="">
+                        <img src="https://ammyy9908.github.io/dama/img/mon01.png" alt="">
                     </div>
                 </div>
 
                 <div class="romana-big">
                     <div class="image-box">
-                        <img src="/img/Romana 01.jpg" alt="">
+                        <img src="https://ammyy9908.github.io/dama/img/Romana 01.jpg" alt="">
                     </div>
                 </div>
 
                 <div class="romanas">
                     <div class="image-box">
-                        <img src="/img/Romana 01.png" alt="">
+                        <img src="https://ammyy9908.github.io/dama/img/Romana 01.png" alt="">
                         </div>
                         <div class="image-box">
-                            <img src="/img/Romana 02.png" alt="">
+                            <img src="https://ammyy9908.github.io/dama/img/Romana 02.png" alt="">
                             </div>
                 </div>
 
